[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/UITheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/SliderValue.gd" type="Script" id=2]
[ext_resource path="res://Scripts/AIvAIPreGameSettings.gd" type="Script" id=3]

[node name="AIvAIPreGameSettings" type="CanvasLayer"]
layer = 10
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0.25098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0

[node name="AntiGnomeOptions" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -371.0
margin_top = -100.0
margin_right = -27.0
margin_bottom = 48.0
theme = ExtResource( 1 )

[node name="Options" type="VBoxContainer" parent="AntiGnomeOptions"]
margin_right = 344.0
margin_bottom = 148.0
theme = ExtResource( 1 )

[node name="SEPARATOR" type="HSeparator" parent="AntiGnomeOptions/Options"]
margin_right = 344.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="AntiGnomeOptions/Options"]
margin_top = 8.0
margin_right = 344.0
margin_bottom = 28.0
text = "Anti-gnome strength"
align = 1

[node name="StrengthSlider" type="HSlider" parent="AntiGnomeOptions/Options"]
margin_top = 32.0
margin_right = 344.0
margin_bottom = 48.0
min_value = 1.0
max_value = 4.0
value = 1.0
tick_count = 4

[node name="StrSliderValue" type="Label" parent="AntiGnomeOptions/Options"]
margin_top = 52.0
margin_right = 344.0
margin_bottom = 72.0
align = 1
script = ExtResource( 2 )
slider_name = "StrengthSlider"

[node name="SEPARATOR2" type="HSeparator" parent="AntiGnomeOptions/Options"]
margin_top = 76.0
margin_right = 344.0
margin_bottom = 80.0

[node name="PointsLabel" type="Label" parent="AntiGnomeOptions/Options"]
margin_top = 84.0
margin_right = 344.0
margin_bottom = 104.0
text = "Base HP"
align = 1

[node name="ObjHPSlider" type="HSlider" parent="AntiGnomeOptions/Options"]
margin_top = 108.0
margin_right = 344.0
margin_bottom = 124.0
min_value = 100.0
max_value = 1000.0
step = 50.0
value = 100.0
tick_count = 10

[node name="PoiSliderValue" type="Label" parent="AntiGnomeOptions/Options"]
margin_top = 128.0
margin_right = 344.0
margin_bottom = 148.0
align = 1
script = ExtResource( 2 )
slider_name = "ObjHPSlider"

[node name="GnomeOptions" type="PanelContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -100.0
margin_right = 369.0
margin_bottom = 48.0
theme = ExtResource( 1 )

[node name="Options" type="VBoxContainer" parent="GnomeOptions"]
margin_right = 344.0
margin_bottom = 148.0
theme = ExtResource( 1 )

[node name="SEPARATOR" type="HSeparator" parent="GnomeOptions/Options"]
margin_right = 344.0
margin_bottom = 4.0

[node name="StrengthLabel" type="Label" parent="GnomeOptions/Options"]
margin_top = 8.0
margin_right = 344.0
margin_bottom = 28.0
text = "gnome strength"
align = 1

[node name="StrengthSlider" type="HSlider" parent="GnomeOptions/Options"]
margin_top = 32.0
margin_right = 344.0
margin_bottom = 48.0
min_value = 1.0
max_value = 4.0
value = 1.0
tick_count = 4

[node name="StrSliderValue" type="Label" parent="GnomeOptions/Options"]
margin_top = 52.0
margin_right = 344.0
margin_bottom = 72.0
align = 1
script = ExtResource( 2 )
slider_name = "StrengthSlider"

[node name="SEPARATOR2" type="HSeparator" parent="GnomeOptions/Options"]
margin_top = 76.0
margin_right = 344.0
margin_bottom = 80.0

[node name="PointsLabel" type="Label" parent="GnomeOptions/Options"]
margin_top = 84.0
margin_right = 344.0
margin_bottom = 104.0
text = "Base HP"
align = 1

[node name="ObjHPSlider" type="HSlider" parent="GnomeOptions/Options"]
margin_top = 108.0
margin_right = 344.0
margin_bottom = 124.0
min_value = 100.0
max_value = 1000.0
step = 50.0
value = 100.0
tick_count = 10

[node name="PoiSliderValue" type="Label" parent="GnomeOptions/Options"]
margin_top = 128.0
margin_right = 344.0
margin_bottom = 148.0
align = 1
script = ExtResource( 2 )
slider_name = "ObjHPSlider"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.0
margin_top = -140.0
margin_right = 2.0
margin_bottom = -100.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 46.0
margin_bottom = 20.0
text = "Start"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 46.0
margin_bottom = 44.0
text = "Back"

[connection signal="value_changed" from="AntiGnomeOptions/Options/StrengthSlider" to="AntiGnomeOptions/Options/StrSliderValue" method="_on_StrengthSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
